MOD: font change

--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -1,7 +1,13 @@
-body {
-  font-family: Optima, Candara, Calibri, Arial, sans-serif;
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+body{
+ font-family: Optima, Candara, Calibri, Arial, sans-serif;
+ /* font-family: 'Noto Sans KR', sans-serif; */
 }
+
 code {
   font-family: "Lucida Console", Monaco, monospace;
   font-size: 85%;
 }
+
+
