--- a/public/cv/style.css
+++ b/public/cv/style.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 
 body {
   font-family: 'Noto Sans KR', sans-serif;
