--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,9 +25,9 @@ hr {
 
 /* code */
 pre {
-  border: 1px solid #ddd;
+  border: none;
   box-shadow: 5px 5px 5px #eee;
-  padding: 0em;
+  padding: 1em;
   overflow-x: auto;
 }
 code { background: #f9f9f9; }
