--- a/public/css/style_og.css
+++ b/public/css/style_og.css
@@ -25,9 +25,9 @@ hr {
 
 /* code */
 pre {
-  border: 0;
-  box-shadow: 0;
-  padding: 0;
+  border: 1px solid #ddd;
+  box-shadow: 5px 5px 5px #eee;
+  padding: 1em;
   overflow-x: auto;
 }
 code { background: #f9f9f9; }
