--- a/themes/hugo-xmin/layouts/partials/foot_custom.html
+++ b/themes/hugo-xmin/layouts/partials/foot_custom.html
@@ -1,4 +1,4 @@
-/* barefoot */
+<!-- barefoot -->
 <link rel="stylesheet" href="/css/barefoot.min.css">
 <script src="/js/barefoot.min.js"></script>
 <script>
@@ -6,12 +6,12 @@
   lf.init();
 </script>
 
-/* mathjax */
+<!-- mathjax -->
 <script src="//yihui.name/js/math-code.js"></script>
 <script async src="//cdn.bootcss.com/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 <script async src="//yihui.name/js/center-img.js"></script>
 
-/* highlight.js */
+<!-- highlight.js -->
 <script src="//cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
 <script src="//cdn.bootcss.com/highlight.js/9.12.0/languages/r.min.js"></script>
 <script>
